// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.One2Many for Resource.Form snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="box"
      style="width: 100%;"
    >
      <div
        class="container"
      >
        <!---->
      </div>
       
      <section
        config="[object Object]"
        id="furet-ui-list"
      >
        <div
          class="container"
        >
          <!---->
        </div>
         
        <header
          id="furet-ui-page-multi-entries-header"
        >
          <div
            class="level"
          >
            <div
              class="level-left"
            >
              <div
                class="buttons is-grouped is-left"
              >
                <!---->
                 
                <!---->
                 
              </div>
            </div>
             
            <div
              class="level-right"
            >
              <div
                class="level-item"
              >
                <div
                  class="field is-grouped-multiline is-grouped"
                >
                  <!---->
                    
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <div
                class="level-item buttons"
              >
                <a
                  class="button is-small"
                  id="furet-ui-page-multi-entries-header-refresh"
                >
                  <span
                    class="icon"
                  >
                    <i
                      class="fa fa-redo fa-lg"
                    />
                  </span>
                </a>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="collapse panel is-pulled-right"
          >
            <div
              class="collapse-trigger"
            />
            <div
              class="collapse-content"
              id=""
              style="display: none;"
            >
              <div
                class="tags"
              />
            </div>
          </div>
        </header>
          
        <div
          class="b-table"
        >
          <div
            class="field table-mobile-sort"
          >
            <div
              class="field has-addons"
            >
              <div
                class="control is-expanded"
              >
                <span
                  class="select is-fullwidth"
                >
                  <select>
                    <!---->
                     
                    <!---->
                    <option
                      value="[object Object]"
                    >
                      
                    Title
                    
                      <!---->
                    </option>
                    <option
                      value="[object Object]"
                    >
                      
                    Color
                    
                      <!---->
                    </option>
                  </select>
                </span>
                 
                <!---->
              </div>
               
              <div
                class="control"
              >
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="top level"
          >
            <div
              class="level-left"
            >
              <div
                class="field is-grouped-multiline is-grouped is-small"
              >
                <!---->
                 
                <div
                  class="control"
                >
                  <strong>
                    Total :
                  </strong>
                  
        0
      
                </div>
                 
                <!---->
                 
                <!---->
                 
                <!---->
                 
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
            </div>
             
            <div
              class="level-right"
            >
              <div
                class="level-item"
              >
                <nav
                  class="pagination is-small"
                >
                  <a
                    class="pagination-link pagination-previous"
                    disabled="disabled"
                    href="#"
                    role="button"
                  >
                    <span
                      aria-hidden="true"
                      class="icon"
                    >
                      <i
                        class="fa fa-angle-left fa-lg"
                      />
                    </span>
                  </a>
                   
                  <a
                    class="pagination-link pagination-next"
                    disabled="disabled"
                    href="#"
                    role="button"
                  >
                    <span
                      aria-hidden="true"
                      class="icon"
                    >
                      <i
                        class="fa fa-angle-right fa-lg"
                      />
                    </span>
                  </a>
                   
                  <ul
                    class="pagination-list"
                  >
                    <!---->
                     
                    <!---->
                      
                    <!---->
                     
                    <!---->
                  </ul>
                </nav>
              </div>
            </div>
          </div>
           
          <div
            class="table-wrapper has-mobile-cards"
          >
            <table
              class="table is-striped is-hoverable"
            >
              <thead>
                <tr>
                  <!---->
                   
                  <!---->
                   
                  <th
                    class=""
                  >
                    <div
                      class="th-wrap"
                    >
                       
                      <!---->
                    </div>
                  </th>
                  <th
                    class="is-sortable"
                  >
                    <div
                      class="th-wrap"
                    >
                      Title 
                      <!---->
                    </div>
                  </th>
                  <th
                    class="is-sortable"
                  >
                    <div
                      class="th-wrap"
                    >
                      Color 
                      <!---->
                    </div>
                  </th>
                   
                  <!---->
                </tr>
                 
                <!---->
                 
                <!---->
              </thead>
               
              <tbody>
                <tr
                  class="is-unmodified"
                  draggable="false"
                >
                  <!---->
                   
                  <!---->
                   
                  <td
                    class="is-action"
                  >
                    <a
                      class="button is-outlined"
                    >
                      <span
                        class="icon is-small"
                      >
                        <i
                          class="fa fa-redo-alt"
                        />
                      </span>
                    </a>
                  </td>
                   
                  <td
                    class="is-list-cell"
                    data-label="Title"
                  >
                    <div>
                      <span>
                        Entry 1
                      </span>
                    </div>
                  </td>
                  <td
                    class="is-list-cell"
                    data-label="Color"
                  >
                    <div>
                      <span>
                        red
                      </span>
                    </div>
                  </td>
                   
                  <!---->
                </tr>
                 
                <!---->
                 
                <!---->
                <tr
                  class="is-unmodified"
                  draggable="false"
                >
                  <!---->
                   
                  <!---->
                   
                  <td
                    class="is-action"
                  >
                    <a
                      class="button is-outlined"
                    >
                      <span
                        class="icon is-small"
                      >
                        <i
                          class="fa fa-redo-alt"
                        />
                      </span>
                    </a>
                  </td>
                   
                  <td
                    class="is-list-cell"
                    data-label="Title"
                  >
                    <div>
                      <span>
                        Entry 2
                      </span>
                    </div>
                  </td>
                  <td
                    class="is-list-cell"
                    data-label="Color"
                  >
                    <div>
                      <span>
                        blue
                      </span>
                    </div>
                  </td>
                   
                  <!---->
                </tr>
                 
                <!---->
                 
                <!---->
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <div
            class="level"
          >
            <div
              class="level-left"
            >
              <div
                class="field is-grouped-multiline is-grouped is-small"
              >
                <!---->
                 
                <div
                  class="control"
                >
                  <strong>
                    Total :
                  </strong>
                  
        0
      
                </div>
                 
                <!---->
                 
                <!---->
                 
                <!---->
                 
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
            </div>
             
            <div
              class="level-right"
            >
              <div
                class="level-item"
              >
                <nav
                  class="pagination is-small"
                >
                  <a
                    class="pagination-link pagination-previous"
                    disabled="disabled"
                    href="#"
                    role="button"
                  >
                    <span
                      aria-hidden="true"
                      class="icon"
                    >
                      <i
                        class="fa fa-angle-left fa-lg"
                      />
                    </span>
                  </a>
                   
                  <a
                    class="pagination-link pagination-next"
                    disabled="disabled"
                    href="#"
                    role="button"
                  >
                    <span
                      aria-hidden="true"
                      class="icon"
                    >
                      <i
                        class="fa fa-angle-right fa-lg"
                      />
                    </span>
                  </a>
                   
                  <ul
                    class="pagination-list"
                  >
                    <!---->
                     
                    <!---->
                      
                    <!---->
                     
                    <!---->
                  </ul>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.One2Many for Resource.List Empty 1`] = `
<div>
  <div />
</div>
`;

exports[`Field.One2Many for Resource.List Hidden 1`] = `
<div>
  <span />
</div>
`;

exports[`Field.One2Many for Resource.List With one value: Snapshot 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        Go to =&gt; Entry 1
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.One2Many for Resource.List With style 1`] = `
<div>
  <div>
    <span
      class="tag"
      style="color: red;"
    >
      <a>
        Go to =&gt; Entry 1
      </a>
    </span>
    <span
      class="tag"
      style="color: blue;"
    >
      <a>
        Go to =&gt; Entry 2
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.One2Many for Resource.List With two value: Snapshot 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        Go to =&gt; Entry 1
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        Go to =&gt; Entry 2
      </a>
    </span>
  </div>
</div>
`;
